--- a/praca.tex
+++ b/praca.tex
@@ -13,6 +13,7 @@
 \usepackage{amssymb}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{siunitx}
+\usepackage{hyperref}
 \usepackage{float}
 \lstloadlanguages{TeX}
 
@@ -55,7 +56,7 @@
 \shorttitleEN{Design and development of the system for data acquisition and analysis for the mobile platform with a set of two manipulators.}
 
 %\thesistype{Praca dyplomowa magisterska}
-\thesistype{Master of Engineering Thesis}
+\thesistype{Bachelor of Engineering Thesis}
 
 \supervisor{dr inż. Paweł Rotter}
 %\supervisor{Marcin Szpyrka PhD, DSc}
