--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,18 +1,69 @@
-@Book{Lam92,
-author = {Lamport, L.},
-title = {LaTeX system przygotowywania dokumentów},
-publisher = {Wydawnictwo Ariel},
-year = {1992},
-address = {Krakow}
+
+@Book{Cyganek,
+ author = {Boguslaw Cyganek and J. Paul Siebert.},
+ title = {An Introduction to 3D Computer Vision Techniques and Algorithms},
+ year = {2009},
+ isbn = {978-0-470-01704-3},
+ publisher = {John Wiley \& Sons, Ltd.}
+} 
+
+@Book{ToFbook,
+author = {Miles Hansard and Seungkyu Lee and Ouk Choi and Radu Horaud},
+title = {Time of Flight Cameras: Principles, Methods, and Applications},
+series = {SpringerBriefs in Computer Science},
+publisher = {Springer},
+year = 2013
 }
 
-@Book{Dil00,
-author = {Diller, A.},
-title = {LaTeX wiersz po wierszu},
-publisher = {Wydawnictwo Helion},
-year = {2000},
-address = {Gliwice}
+@misc{extremetech,
+  howpublished = {\url{http://www.extremetech.com/}}
 }
+
+@Article{sensors,
+AUTHOR = {Sansoni, Giovanna and Trebeschi, Marco and Docchio, Franco},
+TITLE = {State-of-The-Art and Applications of 3D Imaging Sensors in Industry, Cultural Heritage, Medicine, and Criminal Investigation},
+JOURNAL = {Sensors},
+VOLUME = {9},
+YEAR = {2009},
+NUMBER = {1},
+PAGES = {568--601},
+URL = {http://www.mdpi.com/1424-8220/9/1/568},
+PubMedID = {22389618},
+ISSN = {1424-8220},
+DOI = {10.3390/s90100568}
+}
+
+
+@article{slcodes,
+title = "Pattern codification strategies in structured light systems ",
+journal = "Pattern Recognition ",
+volume = "37",
+number = "4",
+pages = "827 - 849",
+year = "2004",
+note = "Agent Based Computer Vision ",
+issn = "0031-3203",
+doi = "http://dx.doi.org/10.1016/j.patcog.2003.10.002",
+url = "http://www.sciencedirect.com/science/article/pii/S0031320303003303",
+author = "Joaquim Salvi and Jordi Pagès and Joan Batlle",
+keywords = "Coded patterns",
+keywords = "Structured light",
+keywords = "3D measuring devices",
+keywords = "Active stereo",
+keywords = "Computer vision "
+}
+
+@Book{borenstein2012making,
+  title={Making Things See: 3D Vision with Kinect, Processing, Arduino, and MakerBot},
+  author={Borenstein, G.},
+  isbn={9781449307073},
+  lccn={2012360966},
+  series={Make: books},
+  url={http://books.google.pl/books?id=G8Ua-YTU4CoC},
+  year={2012},
+  publisher={O'Reilly Media, Incorporated}
+}
+
 
 @Manual{ARM06,
 title = {Ada Reference Manual {ISO}/{IEC} 8652:200y({E}) {E}d. 3},
@@ -47,24 +98,78 @@ year = {2006}
     year = {2009}
 }
 
-@InProceedings{PeDa04,
-author = {Peleska, J. and Große, D. and Haxthausen, A. E. and Drechsler, R.},
-title = {Automated Verification for Train Control Systems},
-booktitle = {Proc. of the 5th Symposium on Formal Methods for Automation and Safety in Railway and Automotive Systems (FORMS/FORMAT 2004)},
-year = {2004},
-pages = {252-265},
-address = {Braunschweig, Germany},
-month = {December}
+
+@TechReport{titof,
+author = {Li, L.},
+title = {Time-of-Flight Camera – An Introduction},
+institution = {Texas Instruments},
+month = {January},
+year = {2014},
+number = {SLOA190B}
 }
 
-@TechReport{BuDoVa03,
-author = {Burns, A. and Dobbing, B. and Vardanega, T.},
-title = {Guide for the Use of the Ada Ravenscar Profile in High Integrity Systems},
-institution = {University of York},
-year = {2003},
-number = {YCS-2003-348}
+@ARTICLE{ransacbase,
+  AUTHOR={Fischler, Martin A. and Bolles, Robert C.},
+  TITLE={Random Sample Consensus: A Paradigm for Model Fitting with Applications
+     to Image Analysis and Automated Cartography},
+  JOURNAL={Communications of the ACM},
+  PAGES={381-395},
+  NUMBER={6},
+  VOLUME={24},
+  YEAR={1981}
+}
+@misc{ASUS,
+  howpublished = "http://www.asus.com/pl/Multimedia/Xtion\textunderscore PRO\textunderscore LIVE/specifications"
+}
+@TechReport{ransacdummies,
+    author = {Zuliani, Marco},
+    institution = {UCSB},
+    keywords = {ransac},
+    organization = {Vision Research Lab},
+    title = {{RANSAC for Dummies}},
+    year = {2012}
+}
+@misc{ensenso,
+  howpublished = "http://www.ensenso.de/?portfolio=n10"
+}
+@misc{ransacwiki,
+  howpublished = "http://en.wikipedia.org/wiki/RANSAC"
 }
 
+@InProceedings{ransacsurvey,
+author = {Sunglok Choi, Taemin Kim and Wonpil Yu},
+title = {Performance Evaluation of RANSAC Family},
+booktitle = {In Proceedings of the British Machine Vision Conference (BMVC)},
+year = {2009},
+url=http://www.bmva.org/bmvc/2009/Papers/Paper355/Paper355.pdf
+}
+
+@InProceedings{descriptorssummary,
+author = "Alexandre, Lu\'{i}s A.",
+title = "{3D} Descriptors for Object and Category Recognition: a Comparative Evaluation",
+booktitle = "Workshop on Color-Depth Camera Fusion in Robotics at the IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)",
+address = "Vilamoura, Portugal",
+month = "October",
+year = "2012"
+}
+
+@InProceedings{rusufpfg,
+	title = {Fast Point Feature Histograms (FPFH) for 3D Registration},
+	booktitle = {The IEEE International Conference on Robotics and Automation (ICRA)},
+	year = {2009},
+	month = {05/2009},
+	address = {Kobe, Japan},
+	url = {http://files.rbrusu.com/publications/Rusu09ICRA.pdf},
+	author = {Radu Bogdan Rusu and Nico Blodow and Michael Beetz}
+}
+
+@phdthesis{rusuthesis,
+  author = {Rusu, Radu Bogdan},
+  title =  {{Semantic 3D Object Maps for Everyday Manipulation in Human Living Environments}},
+  school = {Technische Universit\"at M\"unchen},
+  year =   {2009},
+  bib2html_pubtype  = {PhD Thesis}
+}
 
 
 @manual{Alvis2011,
